@@ -12,6 +12,7 @@ Bug fixes / Maintenance
 - streamline py.path.local.mkdtemp implementation and usage
 - don't print empty lines when showing junitxml-filename
 - fix py.code.compile(source) to generate unique filenames
+- add optional boolean ignore_errors parameter to py.path.local.remove
 
 Changes between 1.3.0 and 1.3.1
 ==================================================
